--- a/css/style.css
+++ b/css/style.css
@@ -82,44 +82,55 @@ main{
 
 /*Latest News*/
 .latest-news{
+    max-width: 100%; /* Menggunakan seluruh lebar layar */
     display: flex;
-    width: 100vh;
-}
-.left{
-    flex:2;
-}
-.left article{
-    background-color: #f9f9f9; /* Warna latar belakang yang ringan */
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Bayangan lembut */
-    overflow: hidden;
-    margin: 20px;
-    padding: 20px;
-    width: 700px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.left article img{
-    width:100%;
-}
-.right{
-    flex:1
-}
-.right article{
-    background-color: #f9f9f9; /* Warna latar belakang yang ringan */
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Bayangan lembut */
-    overflow: hidden;
-    margin: 20px;
-    padding: 20px;
-    max-width: 400px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.right article img{
-    width:300px;
+    gap: 20px; 
+    padding: 20px; 
 }
 
-/*Popular Article*/
-.popular-article{
-    display: flex;
-    flex-wrap: wrap;
+.latest-news .left {
+    flex: 4;
+    color: white; 
+    border-radius: 8px; 
 }
+.latest-news .left article{
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    border-radius: 8px; 
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); 
+    border:2px solid white;
+    margin: 10px auto;
+    cursor: pointer;
+    overflow: auto;
+}
+.latest-news .left article img{
+    width: 100%;
+}
+
+.latest-news .right {
+    flex: 2;
+    padding: 20px; 
+    border-radius: 8px;
+    background-color: #f4f4f4; 
+}
+.latest-news .right article{
+    width: 100%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    margin: 10px auto;
+    overflow: auto;
+    color: black;
+}
+.latest-news .right article img{
+    width: 100%;
+
+}
+
+.latest-news aside{
+    flex:2;
+}
+
+/* Popular Article */
+.popular-article
